extracted_vulnerabilities/pair_208522_412117/fixed_report.txt
extracted_vulnerabilities/pair_208522_412117/dnscrypt_fixed.c:43:3: error: There is an unknown macro here somewhere. Configuration is required. If continue is a macro then please configure it. [unknownMacro]
  continue
  ^
nofile:0:0: information: Active checkers: There was critical errors (use --checkers-report=<filename> to see details) [checkersReport]

